<resources>
    <string name="app_name">Calculadora</string>
    <string name="equals">=</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="Resultado" />
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_3">3</string>
    <string name="c">c</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="plus">+</string>
    <string name="_5">5</string>
    <string name="_minus">-</string>
    <string name="_6">6</string>
    <string name="_x">x</string>
    <string name="_div">/</string>
    <string name="_percent">%</string>
    <string name="_borrar">Borrar</string>
</resources>
